--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
       <div class="mt-5">
-        <h2 class="text-white" >Galeria de Imágenes</h2>
+        <h2 class="text-white" >Galeria de FOTOS</h2>
         <img class="img-fluid rounded-2 col-md-3 col-4 m-2 f1" src="./img/juguete-01.jpg" alt="">
         <img class="img-fluid rounded-2 col-md-3 col-4 m-2 f1" src="./img/juguete-02.jpeg" alt="">
         <img class="img-fluid rounded-2 col-md-3 col-4 m-2 f1" src="./img/juguete-03.jpg" alt="">
