Cambios en la descripción de quienes somos

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="col-md-12">
         <h2 id="t1" class="text-white">Quienes Somos</h2>
         <p class="text-white"> Somos un emprendimiento de un grupo de jóvenes,
-            quienes vendemos productos en linea</p>
+            quienes vendemos productos en linea a precios competitivos</p>
       </div>
       <img class="col-sm-8 col-md-8 mx-auto" src="./img/fundadores.jpg" alt="foto fundadores">
 
